--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Tom Tormal",
-    "version": "1.0",
+    "name": "Tom Formal - WhatsApp",
+    "short_name": "Tom FormalAI",
+    "version": "1.1",
     "description": "Transformar textos informais em formais para whatsapp web",
     "permissions": ["storage"],
     
