--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "manifest_version": 3,
     "name": "Tom Formal - WhatsApp",
     "short_name": "Tom FormalAI",
-    "version": "1.1",
-    "description": "Transformar textos informais em formais para whatsapp web",
+    "version": "1.2",
+    "description": "Um bot de WhatsApp que responde mensagens automaticamente com inteligência artificial.",
     "permissions": ["storage"],
     
     "action": {
