ajuste estrutura/organização

--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
         "default_popup": "popup.html",
         "default_title": "TomFormal",
         "default_icon": {
-            "16": "icon16.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
+            "16": "icons/icon16.png",
+            "48": "icons/icon48.png",
+            "128": "icons/icon128.png"
         }
     },
 
@@ -23,7 +23,8 @@
       "https://brsistemas.whatsprofissional.digital/*",
       "https://i3chat.com.br/*" 
           ],
-    "js": ["content.js"]
+    "type": "module",
+    "js": ["/js/content.js"]
   }
  ]
 
